fourth-module/12-k8s-06-conf/src/2-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-2
  labels:
    app: task-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-2
  template:
    metadata:
      labels:
        app: task-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6-alpine
        ports:
        - containerPort: 80
          name: http-port
        - containerPort: 443
          name: https-port
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            subPath: nginx-base-page
            name: test
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
      volumes:
      - name: test
        configMap:
          name: nginx-cfg
