fourth-module/12-k8s-06-conf/src/1-3-nginx-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nginx-nodeport-svc
spec:
  ports:
  - name: http-nginx
    port: 80
    protocol: TCP
    nodePort: 30080
  selector:
    app: task-1
  type: NodePort
