fourth-module/12-k8s-06-conf/src/2-2-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nginx-nodeport-svc
spec:
  ports:
  - name: http-nginx
    port: 80
    protocol: TCP
  selector:
    app: task-2
  type: NodePort
