fourth-module/12-k8s-06-conf/src/2-3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: testhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-nodeport-svc
            port:
              number: 80
  tls:
    - hosts:
      - testhost
      secretName: test-secret
